--- a/app/index.html
+++ b/app/index.html
@@ -12,13 +12,20 @@
   <section class="section">
     <div class="container">
       <h1 class="title">
-        Hello World
+        TvMaze
       </h1>
       <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
+        Catalog
       </p>
+      <div id="catalogo"></div>
     </div>
-  </section>
+    
+
+  </section>  
+  <script src="js/models/serie.js"></script>
+  <script src="js/models/series.js"></script>
+  <script src="js/controllers/SerieController.js"></script>
+  <script src="js/views/SeriesView.js"></script>
   <script src="js/app.js"></script>
   </body>
 </html>
