--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TvMaze</title>
-    <link rel="stylesheet" href="css/bulma.css">
-    <link rel="stylesheet" href="css/app.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TvMaze</title>
+  <link rel="stylesheet" href="css/bulma.css">
+  <link rel="stylesheet" href="css/app.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+</head>
+
+<body>
   <section class="section">
     <div class="container">
       <h1 class="title">
@@ -20,14 +22,24 @@
 
       <div id="catalogo"></div>
 
-    </div>
-    
+      <div class="modal" id="serie-detalhes">
+        <div class="modal-background"></div>
+        <div class="modal-content" id="detalhes">
 
-  </section>  
+        </div>
+        <button class="modal-close is-large" aria-label="close"></button>
+      </div>
+
+    </div>
+
+
+  </section>
   <script src="js/models/serie.js"></script>
   <script src="js/models/series.js"></script>
   <script src="js/controllers/SerieController.js"></script>
   <script src="js/views/SeriesView.js"></script>
+  <script src="js/views/SerieView.js"></script>
   <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
