feat: 3 pontinhos para indicar falta de dados

--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,21 @@
 </head>
 
 <body>
+    <section class="hero">
+        <div class="hero-body">
+          <div class="container">
+            <h1 class="title">
+                TvMaze
+            </h1>
+            <h2 class="subtitle">
+                Catalog
+            </h2>
+          </div>
+        </div>
+      </section>
+
   <section class="section">
     <div class="container">
-      <h1 class="title">
-        TvMaze
-      </h1>
-      <p class="subtitle">
-        Catalog
-      </p>
 
       <div id="catalogo"></div>
 
