feat: header vermelho

--- a/app/index.html
+++ b/app/index.html
@@ -11,18 +11,18 @@
 </head>
 
 <body>
-    <section class="hero">
-        <div class="hero-body">
-          <div class="container">
-            <h1 class="title">
-                TvMaze
-            </h1>
-            <h2 class="subtitle">
-                Catalog
-            </h2>
-          </div>
-        </div>
-      </section>
+  <section class="hero is-danger is-bold">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          TvMaze
+        </h1>
+        <h2 class="subtitle">
+          Catalog
+        </h2>
+      </div>
+    </div>
+  </section>
 
   <section class="section">
     <div class="container">
@@ -31,9 +31,7 @@
 
       <div class="modal" id="serie-detalhes">
         <div class="modal-background"></div>
-        <div class="modal-content" id="detalhes">
-
-        </div>
+        <div class="modal-content" id="detalhes"></div>
         <button class="modal-close is-large" aria-label="close"></button>
       </div>
 
