add: favoritos funcionando com localStorage

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,9 @@
   <section class="section">
     <div class="container">
 
+      <h1 class="title">Favoritos</h1>
+      <div id="favoritos"></div>
+      <h1 class="title">Series</h1>
       <div id="catalogo"></div>
 
       <div class="modal" id="serie-detalhes">
