--- a/app/index.html
+++ b/app/index.html
@@ -14,12 +14,7 @@
   <section class="hero is-danger is-bold">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title">
-          TvMaze
-        </h1>
-        <h2 class="subtitle">
-          Catalog
-        </h2>
+        <h1 class="title has-text-dark is-size-1 is-bold">TvMaze</h1>
       </div>
     </div>
   </section>
@@ -27,9 +22,9 @@
   <section class="section">
     <div class="container">
 
-      <h1 class="title">Favoritos</h1>
+      
       <div id="favoritos"></div>
-      <h1 class="title">Series</h1>
+      
       <div id="catalogo"></div>
 
       <div class="modal" id="serie-detalhes">
