--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="field has-addons" style="width: 30%;">
           <div class="control">
-            <input id="inputProcurar" class="input" type="text" placeholder="Ex.: Chicken">
+            <input id="inputProcurar" class="input" type="text" placeholder="Ex.: Zombie">
           </div>
           <div class="control">
             <a class="button is-info" id="btnProcurar">Procurar</a>
