fix: layout logo

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 
       <div class="container flex-container">
           
-          <div style="justify-content: center;">
+          <div id="logo">
               <img src="img/apple-touch-icon-180x180.png" />
           </div>
 
