--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="img/favicon-16x16.png" />
   <link rel="stylesheet" href="css/bulma.css">
   <link rel="stylesheet" href="css/app.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 <body>
